--- a/Voting-App/views/index.hbs
+++ b/Voting-App/views/index.hbs
@@ -1,2 +1,20 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="main-page">
+
+      <h3>Select a Poll and Vote </h3>
+      <h4> OR</h4>
+      <h3>Sign in To Create Your Own Pole </h3>
+
+    </div>
+  </div>
+
+  <div class="row row-list-group">
+    <div class="col-sm-8 col-sm-offset-2">
+      <div class="list-group">
+        <a href="/vote" class="list-group-item">Dapibus ac facilisis in</a>
+
+      </div>
+    </div>
+  </div>
+</div>
