--- a/Voting-App/views/polls/createpoll.hbs
+++ b/Voting-App/views/polls/createpoll.hbs
@@ -9,5 +9,5 @@
     <textarea class="form-control" rows="10"></textarea>
   </div>
 
-  <button class="btn btn-primary">Done</button>
+  <button class="btn btn-default">Create Poll</button>
 </div>
