--- a/Voting-App/views/index.hbs
+++ b/Voting-App/views/index.hbs
@@ -1,6 +1,6 @@
-<div class="container-fluid">
+<div class="container">
   <div class="row">
-    <div class="main-page">
+    <div class="col-md-6 col-md-offset-3" style="text-align:center">
 
       <h3>Select a Poll and Vote </h3>
       <h4> OR</h4>
@@ -8,12 +8,18 @@
 
     </div>
   </div>
-
-  <div class="row row-list-group">
-    <div class="col-sm-8 col-sm-offset-2">
-      <div class="list-group">
-        <a href="/vote" class="list-group-item">Dapibus ac facilisis in</a>
-
+  <div class="row" style="background:#eee;padding:50px;width:;margin:auto">
+    <div class="row row-list-group">
+      <div class="col-sm-12">
+        <div class="list-group">
+          <a href="/vote" class="list-group-item">Dapibus ac facilisis in</a>
+          <a href="/vote" class="list-group-item">Dapibus ac facilisis in</a>
+          <a href="/vote" class="list-group-item">Dapibus ac facilisis in</a>
+          <a href="/vote" class="list-group-item">Dapibus ac facilisis in</a>
+          <a href="/vote" class="list-group-item">Dapibus ac facilisis in</a>
+          <a href="/vote" class="list-group-item">Dapibus ac facilisis in</a>
+          <a href="/vote" class="list-group-item">Dapibus ac facilisis in</a>
+        </div>
       </div>
     </div>
   </div>
