added authentication with google

--- a/Voting-App/views/index.hbs
+++ b/Voting-App/views/index.hbs
@@ -2,13 +2,13 @@
   <div class="row">
     <div class="col-md-6 col-md-offset-3" style="text-align:center">
 
-      <h3>Select a Poll and Vote </h3>
-      <h4> OR</h4>
-      <h3>Sign in To Create Your Own Pole </h3>
+      <h3>Select a poll and vote </h3>
+      <h4> or</h4>
+      <h3>Sign in to create your own poll</h3>
 
     </div>
   </div>
-  <div class="row" style="background:#eee;padding:50px;width:;margin:auto">
+  <div class="row" style="background:#eee;padding:50px 30px 30px 30px;margin:30px auto auto auto">
     <div class="row row-list-group">
       <div class="col-sm-12">
         <div class="list-group">
