--- a/Voting-App/views/polls/mypolls.hbs
+++ b/Voting-App/views/polls/mypolls.hbs
@@ -1,11 +1,11 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-12" style="text-align:center;padding:30px">
-      <h2>Hello {{ user.name }}</h2>
-      <h1>Here are your polls </h1>
+      <h4>Hello {{ user.username }}</h4>
+      <h3>Here are your polls </h3>
       <h4>OR</h4>
-      <h2>Want to create more !!!</h2>
-      <button class="btn btn-default createpoll"> <a href="/user/createpoll" style="text-decoration:none">  Create a New Poll </a></button>
+      <h4>Want to create more !!!</h4>
+      <a href="/user/create" >  <button class="btn btn-default createpoll"> Create a New Poll </button></a>
     </div>
   </div>
   <div class="row">
