--- a/Voting-App/public/stylesheets/style.css
+++ b/Voting-App/public/stylesheets/style.css
@@ -1,7 +1,7 @@
 body {
   padding: 0px;
-  font: 14px "Arial", sans-serif;
-  color:#555 !important;
+  font-family: 'Belleza' !important;
+  color:#444 !important;
 }
 
 .container-fluid { width:1380px !important; }
