--- a/Voting-App/views/partials/header.hbs
+++ b/Voting-App/views/partials/header.hbs
@@ -9,15 +9,22 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Voting App</a>
+      <a class="navbar-brand" href="/">Voting App</a>
     </div>
 
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
+
         <li><a href="/">Home</a></li>
+
+        {{# if user.username}}
+        <li><a href="/user">Polls </a></li>
+        <li><a href="/auth/logout">Sign out </a></li>
+        {{else }}
         <li><a href="/auth/google">Sign in </a></li>
+        {{/ if}}
       </ul>
     </div><!-- /.navbar-collapse -->
   </div>
