--- a/Voting-App/views/polls/createpoll.hbs
+++ b/Voting-App/views/polls/createpoll.hbs
@@ -1,13 +1,17 @@
 <div class="container">
+  <form class="" action="/user/create" method="post">
+
+
   <div class="input-group">
     <span class="input-group-addon" id="sizing-addon2">Poll Name</span>
-    <input type="text" class="form-control" placeholder="my pole" aria-describedby="sizing-addon2">
+    <input type="text" name='poll' class="form-control" placeholder="About what!" aria-describedby="sizing-addon2">
   </div>
   <br/>
   <div class="panel panel-default">
     <div class="panel-footer">Options (seperated by a line)</div>
-    <textarea class="form-control" rows="10"></textarea>
+    <textarea class="form-control" name="polloption" rows="10"></textarea>
   </div>
 
-  <button class="btn btn-default">Create Poll</button>
+  <input type="submit" class="btn btn-default" value="Create poll">
+  </form>
 </div>
