--- a/Voting-App/views/polls/mypolls.hbs
+++ b/Voting-App/views/polls/mypolls.hbs
@@ -1,18 +1,22 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-12" style="text-align:center;padding:30px">
-      <h4>Hello {{ user.username }}</h4>
+      <h4>Hello, {{ user.username }}</h4>
       <h3>Here are your polls </h3>
-      <h4>OR</h4>
+      <h4>or</h4>
       <h4>Want to create more !!!</h4>
       <a href="/user/create" >  <button class="btn btn-default createpoll"> Create a New Poll </button></a>
     </div>
   </div>
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
+      <form class="" action="index.html" method="post">
       <div class="list-group">
-        <a href="/vote" class="list-group-item">Dapibus ac facilisis in</a>
+        {{# each data }}
+         <a href="/vote/{{id}}" class="list-group-item">{{ topic }}</a>
+        {{/ each }}
       </div>
+        </form>
     </div>
   </div>
 
