--- a/Voting-App/views/partials/header.hbs
+++ b/Voting-App/views/partials/header.hbs
@@ -20,7 +20,7 @@
         <li><a href="/">Home</a></li>
 
         {{# if user.username}}
-        <li><a href="/user">Polls </a></li>
+        <li><a href="/user">My Polls </a></li>
         <li><a href="/auth/logout">Sign out </a></li>
         {{else }}
         <li><a href="/auth/google">Sign in </a></li>
