--- a/nightlife/client/src/components/Home/home.css
+++ b/nightlife/client/src/components/Home/home.css
@@ -1,18 +1,6 @@
-body {
-  background: #000;
-}
-
-.root-div {
-  background: black;
-  padding: 40px;
-}
-
-a, a:hover,a:visited,a:active {
-  color: #222;
-}
-
-@media all and (min-width: 780px){
-	.root-div .segment{
-		padding:40px;
-	}
+.home-root {
+  margin-top:20vh;
+  display : flex;
+  flex-direction: column;
+  align-items: center;
 }
