--- a/nightlife/client/src/index.css
+++ b/nightlife/client/src/index.css
@@ -1,5 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  background: #1B1C1D;
+  color: rgba(255,255,255,.9);
+  user-select: none;
 }
