--- a/nightlife/client/src/components/Search/Search.css
+++ b/nightlife/client/src/components/Search/Search.css
@@ -1,3 +1,10 @@
 .search-bar{
+	margin-top : 50px;
 	margin-left : 10vw;
+}
+
+@media only screen and (max-width: 722px) {
+  .search-bar {
+    margin-left: 50px;
+  }
 }
