--- a/nightlife/client/src/components/About/About.css
+++ b/nightlife/client/src/components/About/About.css
@@ -1,10 +1,10 @@
 .root-div {
   padding-top: 20px;
-  margin-top: 50px;
+  margin-top: 30px;
 }
 
 .git-link ,.git-link:hover,.git-link:visited,.git-link:active,i {
-  color: #222;
+  color: #222 !important;
 }
 
 @media all and (min-width: 780px){
